Fix close icon on IE11

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -62,6 +62,11 @@ $modal_secondary-button-icon-pos: 'no-icon' !default;
         width: 3rem;
         height: 3rem;
 
+        // IE11 cuts background when in rem units
+        .ie11 & {
+            background-size: 10px 10px;
+        }
+
         span {
             @include visually-hidden();
         }
